fix: header alignment
`width: 100%` doesn't go well with the margins, because we'll have 100% + margins and then the content is shifted, partially off the page.

--- a/print_style/print_style.scss
+++ b/print_style/print_style.scss
@@ -3,7 +3,6 @@
     position: relative;
 
     #header {
-        width: 100%;
         /* ( 45 mm - 10 mm margin ) */
         height: 35mm;
         /* Overwrite empty header inserted by frappe */
